assets/css/main.css
/* ---------------- Font styles ---------------- */

.font-libre-baskerville {
    font-family: 'Libre Baskerville', serif;
}

.font-source-sans-pro {
    font-family: 'Source Sans Pro', sans-serif;
}

.font-nixie-one {
    font-family: 'Nixie One', cursive;
}

.font-open-sans {
    font-family: 'Open Sans', sans-serif;
}

/* ---------------- Color Pallete ---------------- */

.bg-color-off-white {
    background-color: #F6F4F2;
}

.bg-color-grey-blue {
    background-color: #425664;
}

.color-grey-blue {
    color: #425664;
}

.color-burnt-gold {
    color: #C6AD8F;
}

.color-saratoga {
    color: rgba(85, 84, 17, 1);
}

.bg-color-saratoga {
    background-color: rgba(85, 84, 17, 1);
}

.bg-color-saratoga-light {
    background-color: rgba(141, 140, 43, 1);
}

.color-wild-sand {
    color: rgba(243, 244, 243, 1);
}

.bg-color-wild-sand {
    background-color: rgba(243, 244, 243, 1);
}

.bg-color-wild-sand-darker {
    background-color: rgba(203, 207, 203, 1);
}

/* ---------------- Header ---------------- */

.logo-container {
    background-color: rgba(85, 84, 17, 1);
    color: #fff;
}

.logo-container h3 {
    display: none;
}

.header-container-right {
    color: rgba(85, 84, 17, 1);
    background-color: rgba(203, 207, 203, 1);
    flex-direction: column;
    justify-content: center;
}

.header-container-right h1 {
    font-weight: 900;
    margin-top: .5rem;
}

.logo {
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    transition: all .5s ease-in-out;
    -moz-transition: all .5s ease-in-out;
    -webkit-transition: all .5s ease-in-out;
}

/* ---------------- Main Styles ---------------- */

.parallax {
    background-image: url("../images/background-image-transparent.png");

    /* Set a specific height */
    height: 100%;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

html,
body {
    font-family: 'Open Sans', sans-serif !important;
    color: rgba(44, 43, 7, 1);
    height: 100%;
}

header {
    font-family: 'Nixie One', cursive;
    text-align: center;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Nixie One', cursive;
    font-weight: 900;
}

a {
    text-decoration: none;
    color: rgba(44, 43, 7, 1);
}

.main-content {
    color: rgba(44, 43, 7, 1);
    display: none;
}

.side-content {
    background-color: rgba(203, 207, 203, 1);
}

.form-group {
    font-family: 'Open Sans', sans-serif;
    font-size: 1rem;
}

#submit-button {
    margin-top: 15px;
}

button {
    background-color: rgba(85, 84, 17, 1) !important;
    border-color: rgba(85, 84, 17, 1) !important;
    color: rgba(243, 244, 243, 1) !important;
}

.btn-primary:not(:disabled):not(.disabled).active:focus,
.btn-primary:not(:disabled):not(.disabled):active:focus,
.show>.btn-primary.dropdown-toggle:focus {
    box-shadow: none !important;
}

.btn-primary.focus,
.btn-primary:focus {
    box-shadow: none !important;
}

button a {
    color: rgba(243, 244, 243, 1);
}

.form-control:focus {
    border-color: rgba(44, 43, 7, 1);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(44, 43, 7, 1);
}

ul {
    padding: 0;
}

li {
    list-style-type: none;
    border-bottom: 2px solid rgba(141, 140, 43, 1);
}

li:last-child {
    border: none;
}

li a {
    -webkit-transition: font-size 0.3s ease;
    -moz-transition: font-size 0.3s ease;
    -o-transition: font-size 0.3s ease;
    -ms-transition: font-size 0.3s ease;
    transition: font-size 0.3s ease;
}

li a:hover {
    font-size: 1.2rem;
    text-decoration: none;
}

#other-recipe-links {
    font-family: 'Open Sans', sans-serif;
}

#other-recipe-links h4 {
    padding-bottom: 15px;
}

.form-container {
    padding: 20px;
    font-weight: 500;
}

.form-container small {
    font-weight: 900;
    color: rgba(44, 43, 7, 1) !important;
}

.recipe-header-detail {
    padding: 20px;
}

.recipe-link {
    margin-bottom: 25px;
    /* Hidden before populated */
    display: none;
    overflow: hidden;
}

.ingredients-list {
    margin-top: 30px;
    /* Hidden before populated */
    display: none;
    overflow: hidden;
}

.ingredients-list h2 {
    margin-bottom: 25px;
}

.ingredients-list li {
    border-bottom: 3px dotted rgba(141, 140, 43, 1);
}

.recipe-attributes input {
    margin-bottom: 20px;
}

.other-recipes {
    margin-top: 25px;
}

.other-recipes button {
    margin-bottom: 15px;
    margin-right: 10px;
}

#other-recipe-links {
    margin-bottom: 1rem;
}

/* Style the collapsible content. Note: hidden by default */
#recipe-links-content {
    padding: 0 18px;
    max-height: 0;
    transition: max-height 0.5s ease-in-out;
    overflow: hidden;
}

#recipe-links-content p {
    margin-top: 1rem;
}

#recipe-links-collapsible {
    display: none;
    overflow: hidden;
}

/* ---------------- Media Queries ---------------- */

@media (max-width: 768px) {
    .logo-container {
        display: flex;
        align-items: center;
        justify-content: center;
    }

    .logo-container h3 {
        display: block;
    }

    .logo-container img {
        height: 75%;
        width: 75%;
    }

}

@media (max-width: 350px) {
    .logo-container > h3 {
        font-size: 1rem !important;
    }

    .logo-container img {
        height: 50%;
        width: 50%;
    }

}

@media (min-width: 768px) {

    .main-row,
    .main-section {
        height: 100%;
    }
}

/* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
@media only screen and (max-device-width: 1366px) {
    .parallax {
        background-attachment: scroll;
    }
}

